# iRIC_DataScope

./: .gitignore  LICENSE  README.md  build_memo.md  iRIC_DataScope-1.0-alpha.2.spec  iRIC_DataScope-1.0-beta.1.spec  iRIC_DataScope-v1.0.4.spec  iRIC_DataScope-v1.1.0.spec  iRIC_DataScope.spec  main.py  memo.txt  mkdocs.yml  nuitka-crash-report.xml  pyinstaller用.txt  pyproject.toml  refactor-plan-2025-12-23.md  requirements.txt  requirements_build.txt
.github/workflows/: build-pyinstaller.yml  deploy-docs.yml
docs/: index.md  ipro_cgn_conversion.md
docs/build_docs/: pyinstaller.md
docs/notes/: Case1-cgn-investigation-2026-02-20.md  GUI-redesign-plan-2025-12-24.md  refactor-plan-2026-01-19-app.md  refactor-plan-2026-01-19-ruff.md
docs/release_notes/: v1.1.0.md  v1.1.1.md  v1.1.2.md  v1.1.3.md  v1.2.0.md
docs/specs/: cross_section.md  ipro_cgn_conversion.md  launcher.md  lr_wse.md  lr_wse_min_depth.md  time_series.md  xy_value_colormap_export.md
docs/test_specs/: lr_wse.md
docs/user_docs/: _template.md  cross_section.md  index.md  launcher.md  lr_wse.md  time_series.md  xy_value_map.md
iRIC_DataScope/: __init__.py  app.py
iRIC_DataScope/common/: cgns_converter.py  cgns_reader.py  csv_reader.py  io_selector.py  iric_csv_writer.py  iric_data_source.py  iric_project.py  logging_config.py  (+2 more)
output/: LR_WSE.xlsx  cross_section.xlsx  time_series.xlsx
sample_config/: setting.csv  setting_no_k.csv  格子設定サンプル.csv
sandbox/: analyze_cgn_integrity.py  cgns_result.py  cgns_to_csv.py  export_zone_arrays.py  open_ipro.py  update_hydro.py
tests/: conftest.py
(+51 files in other folders)
