[project]
name = "iric-datascope"
version = "1.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.15.1",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mypy>=1.19.1",
    "pyinstaller>=6.17.0",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]
